Fixed layout issue in Safari on desktop and mobile

--- a/src/components/Modals/NewMatchConfirmationModal.module.scss
+++ b/src/components/Modals/NewMatchConfirmationModal.module.scss
@@ -1,5 +1,6 @@
 .illustration {
   width: 30vh;
+  height: 100%;
 }
 
 .illustrationWrapper {
